# aws-aiops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: agents.yaml  settings.yaml  tools.yaml
deployment/agentcore/: Dockerfile  app.py  requirements.txt
deployment/lambda/: Dockerfile  handler.py  requirements.txt
scripts/: deploy.sh  local_run.py  run_local.sh
src/: app.py  fastapi_app.py  main.py
src/agents/: __init__.py  base.py  coding_agent.py  datadog_agent.py  orchestrator.py  s3_agent.py  servicenow_agent.py
src/api/: __init__.py  app.py  schemas.py
src/memory/: __init__.py  agentcore_session_manager.py  conversation_history.py  session_manager.py
src/tools/: __init__.py  code_analysis_tools.py  datadog_tools.py  s3_tools.py  servicenow_tools.py
src/utils/: __init__.py  config_loader.py  logging_config.py
src/workflows/: __init__.py  cron_workflow.py  proactive_workflow.py  swarm_coordinator.py
tests/: __init__.py
tests/integration/: test_workflows.py
tests/unit/: test_agents.py  test_tools.py
